glcolorbalance pipeline crash with GST-1.14.4
Below glcolorbalance pipeline crash with GST-1.14.4: gst-launch-1.0 videotestsrc ! glupload ! glcolorbalance saturation=0.0 ! glcolorconvert ! gldownload ! waylandsink
This commit cause the crash
commit 5523e89c Author: Jan Schmidt jan@centricular.com Date: Tue Feb 27 23:22:24 2018 +1100
glcolorbalance: Support OES textures for input/passthrough
glcolorbalance is in the default GL path inside glimagesink,
so has been causing an possibly-unnecessary extra texture copy
on Android for a while now. If we're just doing passthrough,
we can support OES directly. If not, they'll be transformed
to 2D textures and colourbalanced.